# schedule

./: pyproject.toml
schedule/: app.py
schedule/templates/: main.html
